fix: prevent horizontal scroll on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,6 +103,11 @@
   background-color: transparent;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
